# tt-toplike

./: .gitignore  ARCADE_MODE.md  BORDER_FIX_2026-03-13.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FIXES.md  LICENSE-DOCS  MULTI_CHIP_IMPLEMENTATION.md  NOTICE  PROCESS_MONITORING.md  PSYCHEDELIC_EGUI_STATUS.md  QUICK_START.md  README.md  TERMINAL_STARFIELD.md  TESTING.md  TMUX_COLOR_FIX.md  TMUX_FIXES_SUMMARY.md  TT_SMI_4.1.0_ANALYSIS.md  build-deb.sh  index.html  install.sh  test-egui.sh  test-modes.sh
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  rules
debian/tt-toplike-app/DEBIAN/: control  md5sums
docs/: GUI_FEATURES.md  PROCESS_MONITORING.md  SSH_COLOR_FIX.md  SYSFS_BACKEND.md
examples/: gui_concept.rs
src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs
src/animation/: arcade.rs  baseline.rs  common.rs  memory_castle.rs  memory_flow.rs  mod.rs  starfield.rs  topology.rs  tron_grid.rs
src/backend/: factory.rs  hybrid.rs  json.rs  luwen.rs  mock.rs  mod.rs  smbus_smooth.rs  sysfs.rs
src/models/: device.rs  mod.rs  telemetry.rs
src/ui/: colors.rs  mod.rs
src/ui/egui/: mod.rs
src/ui/gui/: history.rs  mod.rs  terminal_canvas.rs  terminal_grid.rs  visualization.rs
src/ui/tui/: mod.rs
src/workload/: mod.rs  process_monitor.rs
